# aetherise

./: .gitignore  CHANGELOG.de.md  CHANGELOG.md  LICENSE  README.de.md  README.md  aetherise.R  contour.gnuplot  contour_apex.gnuplot  coverage.gnuplot  histcsv.R  histogram.R  plot_contour.bat  plot_contour.sh  plot_contour_apex.bat  plot_contour_apex.sh  plot_coverage.bat  plot_coverage.sh  plot_raw.bat  plot_raw.sh  plot_sidereal.bat  plot_sidereal.sh  plot_signal.bat  plot_signal.sh  plot_signal3d.bat  plot_signal3d.sh  plot_spectrum.bat  plot_spectrum.sh  plot_theory_amp.bat  plot_theory_amp.sh  raw.gnuplot  selected_signals.txt  sidereal.gnuplot  signal.gnuplot  signal3d.gnuplot  simulation_signals.txt  simulation_signals_optimal.txt  simulation_stats.ods  spectrum.gnuplot  test_for_normality.R  (+1 more)
Shankland1955/: dcm_cl_1.csv  dcm_cl_10.csv  dcm_cl_11.csv  dcm_cl_12.csv  dcm_cl_13.csv  dcm_cl_2.csv  dcm_cl_3.csv  dcm_cl_4.csv  dcm_cl_5.csv  dcm_cl_6.csv  dcm_cl_7.csv  dcm_cl_8.csv  dcm_cl_9.csv  fig4A.gnuplot  fringes.gnuplot  plot_fig4A.bat  plot_fig4A.sh  plot_fringes.bat  plot_fringes.sh
aetherise/: CMakeLists.txt  DataSheet.cpp  DataSheet.h  Filter.cpp  Filter.h  Theory.cpp  Theory.h  aetherise.cpp  aetherise.h  astro.cpp  astro.h  build_manual.de.txt  build_manual.en.txt  cmd_line.cpp  cmd_line.h  data_reduction.cpp  data_reduction.h  generators.cpp  generators.h  main.cpp  mathematics.cpp  mathematics.h  mini.cpp  mini.h  models.cpp  models.h  physics.cpp  physics.h  stdx.cpp  stdx.h  utils.cpp  utils.h  versions.inc
aetherise/test/: DataSheet_test.cpp  Filter_test.cpp  Theory_test.cpp  aetherise_test.cpp  astro_test.cpp  calculations.cpp  data_reduction_test.cpp  dcm1.csv  mathematics_test.cpp  mini_test.cpp  physics_test.cpp  stdx_test.cpp  test.cpp  test.h  utils_test.cpp
dcm/: Millers_notes.txt  data_sheets.ods
dcm/csv/: dcm_1925-03-27_101.csv  dcm_1925-03-27_102.csv  dcm_1925-03-30_107.csv  dcm_1925-03-30_108.csv  dcm_1925-03-30_109.csv  dcm_1925-03-31_110.csv  dcm_1925-03-31_111.csv  dcm_1925-04-02_113.csv  dcm_1925-04-02_114.csv  dcm_1925-04-02_115.csv  dcm_1925-04-02_116.csv  dcm_1925-04-02_117.csv  dcm_1925-04-02_118.csv  dcm_1925-04-02_119.csv  dcm_1925-04-03_122.csv  dcm_1925-04-03_123.csv  dcm_1925-04-03_124.csv  dcm_1925-04-03_125.csv  dcm_1925-04-09_131.csv  dcm_1925-04-09_132.csv  dcm_1925-04-09_133.csv  dcm_1925-08-01_29.csv  dcm_1925-08-01_30.csv  dcm_1925-08-01_31.csv  dcm_1925-08-01_32.csv  dcm_1925-08-01_33.csv  dcm_1925-08-01_34.csv  dcm_1925-08-01_35.csv  dcm_1925-08-01_36.csv  dcm_1925-08-04_49.csv  dcm_1925-08-04_50.csv  dcm_1925-08-04_51.csv  dcm_1925-08-04_52.csv  dcm_1925-08-04_53.csv  dcm_1925-08-04_54.csv  dcm_1925-08-05_60.csv  dcm_1925-08-05_61.csv  dcm_1925-08-05_62.csv  dcm_1925-08-05_63.csv  dcm_1925-08-06_74.csv  (+112 more)
dcm/csv/bad/: dcm_1925-04-02_121.csv  dcm_1925-04-03_126.csv  dcm_1925-04-08_130.csv  dcm_1925-04-09_135.csv  dcm_1925-04-10_136.csv  dcm_1925-07-25_2.csv  dcm_1925-07-25_3.csv  dcm_1925-07-27_10.csv  dcm_1925-07-27_4.csv  dcm_1925-07-27_5.csv  dcm_1925-07-27_6.csv  dcm_1925-07-27_7.csv  dcm_1925-07-27_8.csv  dcm_1925-07-27_9.csv  dcm_1925-07-28_11.csv  dcm_1925-07-28_12.csv  (+87 more)
dcm/csv27/: changes.txt  dcm_1927-04-15_16.csv  dcm_1927-04-15_17.csv  dcm_1927-04-15_18.csv  dcm_1927-04-15_19.csv  dcm_1927-04-15_20.csv  dcm_1927-08-08_10.csv  dcm_1927-08-08_12.csv  dcm_1927-08-08_13.csv  dcm_1927-08-08_14.csv  dcm_1927-08-08_15.csv  dcm_1927-08-08_16.csv  dcm_1927-08-08_17.csv  dcm_1927-08-08_18.csv  dcm_1927-08-08_4.csv  dcm_1927-08-08_5.csv  dcm_1927-08-08_6.csv  dcm_1927-08-08_7.csv  dcm_1927-08-08_8.csv  dcm_1927-08-08_9.csv  dcm_1927-08-19_19.csv  dcm_1927-08-19_20.csv  dcm_1927-08-19_21.csv  dcm_1927-08-19_22.csv  dcm_1927-08-19_23.csv  dcm_1927-08-29_26.csv  dcm_1927-08-29_27.csv  dcm_1927-08-29_28.csv  dcm_1927-08-29_29.csv  dcm_1927-08-29_30.csv  dcm_1927-08-29_31.csv  dcm_1927-08-30_32.csv  dcm_1927-08-30_33.csv  dcm_1927-08-30_34.csv  dcm_1927-08-30_35.csv  dcm_1927-08-30_36.csv  dcm_1927-08-30_37.csv  dcm_1927-08-30_38.csv  dcm_1927-08-30_39.csv  dcm_1927-08-30_40.csv  (+11 more)
(+83 files in other folders)
